# rdf2k2-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  generateHDTlib.sh
include/: PlainDictionary.hpp
libk2/src/compression/: RDFCompressor.cpp  RDFCompressor.hpp  RDFDecompressor.cpp  RDFDecompressor.h
libk2/src/dict/: Loader.cpp  Loader.h  PlainDictionaryPlus.cpp  PlainDictionaryPlus.h
libk2/src/index/: IntBasedIndexer.cpp  IntBasedIndexer.hpp  RDFCallbackIndex.cpp  RDFCallbackIndex.h
libk2/src/io/: ByteBuffer.cpp  ByteBuffer.h  RDFSimpleParser.cpp  RDFSimpleParser.h
libk2/src/main/: Main.cpp
libk2/src/serializer/: ThreadedKD2TreeSerializer.cpp  ThreadedKD2TreeSerializer.hpp
libk2/src/util/: DictEntryTriple.cpp  DictEntryTriple.h  LabledMatrix.cpp  LabledMatrix.h  Path.cpp  Path.h  Point.cpp  Point.h  RDFTools.cpp  RDFTools.h  Stats.cpp  Stats.h  StringUtils.cpp  StringUtils.h  TreeNode.cpp  TreeNode.h  Triple.cpp  Triple.h
